fix: travis template accordingly to travis behaviour

--- a/templates/.travis.yml.j2
+++ b/templates/.travis.yml.j2
@@ -13,7 +13,6 @@ python:
   - "2.7"
   - "3.5"
   - "3.6"
-  - "3.7"
 # services:
 #
 # env:
@@ -60,9 +59,11 @@ notifications:
     on_success: always
     on_failure: always
 
-  webhooks:
-    urls:
-      - https://galaxy.ansible.com/api/v1/notifications/
-    on_success: always
-    on_failure: always
-    on_pull_requests: false
+# Only for ansible repositories needed
+#
+# webhooks:
+#    urls:
+#      - https://galaxy.ansible.com/api/v1/notifications/
+#    on_success: always
+#    on_failure: always
+#    on_pull_requests: false
